tests/regression/errors/basic/type_error_8.csd
// Type error test 8
sus number drip = 8
sus text tea = "string_8"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 8:", wrong)
